# protosolid

./: .gitignore  README.md  app.vue  index.js  nuxt.config.ts  package-lock.json  package.json  webpack.config.js
assets/oc/: oc.yml
components/: PreferencesView.vue  Viewer.vue  app-menu.vue  document-view.vue  empty.vue  feature-bar.vue  feature-box.vue  feature-icon.vue  footer-view.vue  icon-toggle.vue  icon-view.vue  list-chooser.vue  material-selector.vue  menu-button.vue  number-input.vue  occ.vue  radio-bar.vue  selector-widget.vue  tab-bar.vue  tool-box.vue  tree-item.vue  tree-view.vue  treelet-export.vue  treelet-material.vue  treelet-parameter.vue  treelet-sketch.vue  treelet-solid.vue  view-port.vue
composables/: use-oc.js
electron/: index.js  main.js  package-lock.json  package.json  preload.js
js/: arrowControls.js  component.js  document.js  emitter.js  export.js  expression.js  features.js  gizmos.js  icons.js  main-app.js  main-common.js  main-wc.js  main-website.js  material.js  materials.js  plane-helper.js  preferences.js  renderer.js  renderer_old.js  selection.js  shadow-catcher.js  shadowCatcher.js  sketch-plane.js  sketchPlane.js  snapping.js  tools.js  transloader.js  units.js  utils.js
js/components/: app-menu.vue  app.vue  document-view.vue  empty.vue  export-stl.vue  feature-bar.vue  feature-box.vue  feature-icon.vue  footer-view.vue  icon-toggle.vue  icon-view.vue  list-chooser.vue  material-selector.vue  menu-button.vue  number-input.vue  pop-up.vue  preferences-view.vue  radio-bar.vue  selector-widget.vue  side-bar.vue  tab-bar.vue  todo-item.vue  tool-bar.vue  tool-box.vue  tree-item.vue  tree-view.vue  treelet-export.vue  treelet-material.vue  treelet-parameter.vue  treelet-sketch.vue  treelet-solid.vue  view-port.vue  website.vue
js/core/: component.js  document.js  export.js  expression.js  features.js  kernel.js
js/three/: arrow-controls.js  dimension-controls.js  gizmos.js  plane-helper-object.js  shadow-catcher.js  sketch-plane.js  transform-controls.js
plugins/: fontawesome.js
public/: splash.html
rust/: Cargo.toml
rust/lib/alchemy/: Cargo.toml
rust/lib/alchemy-core/: Cargo.toml
rust/lib/alchemy-core/src/: lib.rs  renderer.rs  tools.rs
rust/lib/alchemy/src/: lib.rs
rust/lib/shapex/: Cargo.toml
rust/lib/shapex/old/: gwb.c  gwb.shar
rust/lib/shapex/src/: base.rs  curve.rs  export.rs  features.rs  geom.rs  geom2d.rs  geom3d.rs  internal.rs  intersection.rs  io.rs  lib.rs  mesh.rs  solid.rs  surface.rs  test_data.rs  transform.rs  wire.rs
rust/lib/shapex/src/curve/: intersection.rs
rust/lib/shapex/src/export/: serde.rs  step.rs  stl.rs  threemf.rs
rust/lib/shapex/src/geom/: vector.rs
rust/lib/shapex/src/io/: serde.rs  step.rs  stl.rs  threemf.rs
rust/lib/shapex/src/old/: geom.rs  winged_edge.rs
rust/lib/shapex/src/solid/: boolean.rs  edit.rs  features.rs  repair.rs  serde.rs  serialize.rs  tesselation.rs  volume.rs
rust/lib/shapex/src/surface/: intersection.rs
rust/lib/solvo/: Cargo.toml
rust/lib/solvo/src/: base.rs  component.rs  document.rs  feature.rs  internal.rs  io.rs  lib.rs  references.rs  renderer.rs  sketch.rs
rust/src/: buffer_geometry.rs  component.rs  construction_helper.rs  controllable.rs  curve.rs  document.rs  feature.rs  internal.rs  lib.rs  region.rs  sketch.rs  solid.rs  utils.rs
static/: dev.html  index.html  splash.html  website.html
stores/: use-main-store.js
styles/: main.styl  reset.styl  variables.styl  website.styl
