[package]
name = "alchemy"
version = "0.1.0"
description = "Parametric CAD"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
readme = "README.md"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = 'fat'
panic = 'abort'
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[features]
default = ["wee_alloc"]

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.123", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.46"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
wee_alloc = { version = "0.4.5", optional = true }

solvo = { path = "lib/solvo" }
shapex = { path = "lib/shapex" }

[dependencies.web-sys]
version = "0.3.46"
features = [
  "console",
  "Headers",
  "Request",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dev-dependencies]
futures = "0.1.27"
wasm-bindgen-test = "^0.2.45"
wasm-bindgen-futures = "^0.3.22"

[package.metadata.bundle]
name = "Alchemy"
identifier = "org.alchemy.Alchemy"
icon = ["128x128@2x.png"]
resources = ["resources"]
copyright = "Copyright (c) Björn Breitgoff 2018"
category = "public.app-category.graphics-design"
long_description = """
Parametric CAD
"""
