[package]
name = "shapex"
version = "0.1.0"
description = "Geometric modeling kernel"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
cgmath = "0.17.0"
uuid = { version = "0.8.1", features = ["v4"] }
earcutr = { git = "https://github.com/donbright/earcutr" }
