[package]
name = "shapex"
version = "0.1.0"
description = "Geometric modeling kernel"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
ron = "0.7.1"
rand = "0.7.3"
cgmath = { version = "0.17.0", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
earcutr = { git = "https://github.com/donbright/earcutr" }
itertools = "0.10.2"

rayon = { version = "1.5.3", optional = true }

web-sys = { version = "0.3.46", features = ["console"]}

[features]
  rayon = ["dep:rayon"]
