[package]
name = "solvo"
version = "0.1.0"
description = "Geometric constraint solver"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.7.3"
ron = "0.7.1"
serde = { version = "1.0.123", features = ["derive", "rc"] }
cgmath = { version = "0.17.0", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

shapex = { path = "../shapex" }

web-sys = { version = "0.3.46", features = ["console"]}
